# Parsing-example-using-state-monad

./: README.md  parsing-problem.cabal
app/: Main.hs
src/: MyTypes.hs  Parser.hs  SuffixLenses.lhs
