name:                parsing-problem
version:             0.1.0.0
-- synopsis:
-- description: a simple program to extract all the valid name-weight pairs from a given file and insert the records into mongoDB
homepage:            https://gitlab.com/deepakkapiswe/parsing-problem#readme
license:             BSD3
license-file:        LICENSE
author:              Deepak Kapiswe
maintainer:          deepakkapiswe@gmail.com
copyright:           2017 Deepak Kapiswe
category:            Data Extraction
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MyTypes,Parser
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , text
                     , microlens
                     , microlens-th
                     ,template-haskell
                     , mongoDB
  default-language:    Haskell2010

executable parsing-problem-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , mongoDB
                     , text
                     , microlens
                     , microlens-th
                     , template-haskell
                     , parsing-problem
  default-language:    Haskell2010

test-suite parsing-problem-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mtl
                     , text
                     , mongoDB
                     , microlens
                     , microlens-th
                     , template-haskell
                     , parsing-problem
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://gitlab.com/deepakkapiswe/parsing-problem
